OSDOCS-12018: fix FIPS links and update attribute 4.15-16

--- a/microshift_updating/microshift-about-updates.adoc
+++ b/microshift_updating/microshift-about-updates.adoc
@@ -34,7 +34,7 @@ include::snippets/microshift-rhde-compatibility-table-snip.adoc[leveloffset=+1]
 
 [id="microshift-about-updates-rpm-updates_{context}"]
 === Manual RPM updates
-You can use the manual RPM update path to replace your existing version of {microshift-short}. The versions of {op-system} and {microshift-short} must be compatible. Ensuring system health and completing additional system backups are manual processes.
+You can use the manual RPM update path to replace your existing version of {microshift-short}. The versions of {op-system-base} and {microshift-short} must be compatible. Ensuring system health and completing additional system backups are manual processes.
 
 [IMPORTANT]
 ====
