--- a/microshift_updating/microshift-update-options.adoc
+++ b/microshift_updating/microshift-update-options.adoc
@@ -22,7 +22,7 @@ Updates of {microshift-short} are supported with a maximum of two minor versions
 Consider the following when planning to update {microshift-short}:
 
 * You can potentially update {microshift-short} without reinstalling your applications and Operators.
-* {op-system} or {op-system-ostree} updates are only required to update {microshift-short} if the existing operating system is not compatible with the new version of {microshift-short} that you want to use.
+* {op-system-base} or {op-system-ostree} updates are only required to update {microshift-short} if the existing operating system is not compatible with the new version of {microshift-short} that you want to use.
 * {microshift-short} operates as an in-place update and does not require removal of the previous version. Data backups beyond those required for the usual functioning of your applications are also not required.
 
 [id="microshift-update-options-rpm-ostree-updates_{context}"]
@@ -54,7 +54,7 @@ You can update {microshift-short} manually on a non-OSTree system such as {op-sy
 
 [id="microshift-update-options-standalone-rhel-updates_{context}"]
 == Standalone {op-system-ostree} updates
-You can update {op-system-ostree} or {op-system} without updating {microshift-short}, on the condition that the two versions are compatible. Check compatibilities before beginning an update. Use the {op-system-ostree} documentation specific to your update path.
+You can update {op-system-ostree} or {op-system-base} without updating {microshift-short}, on the condition that the two versions are compatible. Check compatibilities before beginning an update. Use the {op-system-ostree} documentation specific to your update path.
 
 //additional resources for updating RHEL alone
 [role="_additional-resources"]
@@ -63,7 +63,7 @@ You can update {op-system-ostree} or {op-system} without updating {microshift-sh
 
 [id="microshift-update-options-simultaneous-microshift-rhel-updates_{context}"]
 == Simultaneous {microshift-short} and operating system updates
-You can update {op-system-ostree} or {op-system} and update {microshift-short} at the same time, on the condition that the versions are compatible. Check for compatibility before beginning an update. First use the {op-system-ostree} and {op-system} documentation specific to your update path to plan and update the operating system. Then use the {microshift-short} update type specific to your update path.
+You can update {op-system-ostree} or {op-system-base} and update {microshift-short} at the same time, on the condition that the versions are compatible. Check for compatibility before beginning an update. First use the {op-system-ostree} and {op-system-base} documentation specific to your update path to plan and update the operating system. Then use the {microshift-short} update type specific to your update path.
 
 //additional resources for updating RHEL and MicroShift
 [role="_additional-resources"]
