--- a/microshift_install/microshift-fips.adoc
+++ b/microshift_install/microshift-fips.adoc
@@ -13,11 +13,7 @@ You can use FIPS mode with RPM-based installations of {microshift-short} on {op-
 
 include::modules/microshift-fips-rpm-system.adoc[leveloffset=+1]
 
-[id="additional-resources_microshift-fips_{context}"]
+[id="additional-resources_{context}"]
 [role="_additional-resources"]
 == Additional resources
-* link:https://access.redhat.com/documentation/en-us/red_hat_enterprise_linux/9/html/security_hardening/assembly_installing-the-system-in-fips-mode_security-hardening[Installing the system in FIPS mode]
-
-* link:https://access.redhat.com/documentation/en-us/red_hat_enterprise_linux/9/html/security_hardening/using-the-system-wide-cryptographic-policies_security-hardening#enabling-fips-mode-in-a-container_using-the-system-wide-cryptographic-policies[Enabling FIPS mode in a container]
-
-* link:https://access.redhat.com/documentation/en-us/red_hat_enterprise_linux/9/html/security_hardening/assembly_installing-the-system-in-fips-mode_security-hardening#federal-information-processing-standards-140-and-fips-mode_assembly_installing-the-system-in-fips-mode[Federal Information Processing Standards 140 and FIPS mode]
+* link:https://docs.redhat.com/en/documentation/red_hat_enterprise_linux/9/html/security_hardening/switching-rhel-to-fips-mode_security-hardening[Switching RHEL to FIPS mode]
