--- a/modules/microshift-install-rpms.adoc
+++ b/modules/microshift-install-rpms.adoc
@@ -33,7 +33,7 @@ $ sudo dnf install -y microshift
 
 . Download your installation pull secret from the https://console.redhat.com/openshift/install/pull-secret[Red Hat Hybrid Cloud Console] to a temporary folder, for example, `$HOME/openshift-pull-secret`. This pull secret allows you to authenticate with the container registries that serve the container images used by {product-title}.
 
-. To copy the pull secret to the `/etc/crio` folder of your {op-system} machine, run the following command:
+. To copy the pull secret to the `/etc/crio` folder of your {op-system-base} machine, run the following command:
 +
 [source,terminal]
 ----
@@ -54,7 +54,7 @@ $ sudo chown root:root /etc/crio/openshift-pull-secret
 $ sudo chmod 600 /etc/crio/openshift-pull-secret
 ----
 
-. If your {op-system} machine has a firewall enabled, you must configure a few mandatory firewall rules. For `firewalld`, run the following commands:
+. If your {op-system-base} machine has a firewall enabled, you must configure a few mandatory firewall rules. For `firewalld`, run the following commands:
 +
 [source,terminal]
 ----
