--- a/release_notes/ocp-4-14-release-notes.adoc
+++ b/release_notes/ocp-4-14-release-notes.adoc
@@ -895,9 +895,9 @@ Certain HTTP request and response headers can now be set or deleted either globa
 For more information, see xref:../networking/ingress-operator.adoc#nw-ingress-set-or-delete-http-headers_configuring-ingress[Setting or deleting HTTP request and response headers in an Ingress Controller] and xref:../networking/routes/route-configuration.adoc#nw-route-set-or-delete-http-headers_route-configuration[Setting or deleting HTTP request and response headers in a route].
 
 [id="ocp-4-14-egress-ips-additional-networks"]
-==== Egress IPs on additional network interfaces
+==== Egress IPs on additional network interfaces is generally available
 
-You can use egress IPs addresses on additional network interfaces as a Technology Preview feature. This feature provides {product-title} administrators with a greater level of control over networking aspects such as routing, addressing, segmentation, and security policies. You can also route workload traffic over specific network interfaces for purposes such as traffic segmentation or meeting specialized requirements.
+You can use egress IPs addresses on additional network interfaces is generally available. This feature provides {product-title} administrators with a greater level of control over networking aspects such as routing, addressing, segmentation, and security policies. You can also route workload traffic over specific network interfaces for purposes such as traffic segmentation or meeting specialized requirements.
 
 For more information, see xref:../networking/ovn_kubernetes_network_provider/configuring-egress-ips-ovn.adoc#nw-egress-ips-multi-nic-considerations_configuring-egress-ips-ovn[Considerations for using an egress IP on additional network interfaces].
 
@@ -2299,6 +2299,11 @@ In the following tables, features are marked with the following statuses:
 |PTP dual NIC hardware configured as boundary clock
 |Technology Preview
 |General Availability
+|General Availability
+
+|Egress IPs on additional network interfaces
+|Not Available
+|Not Available
 |General Availability
 
 |Intel E810 Westport Channel NIC as PTP grandmaster clock
