OCPBUGS-42088-4.15:updates TP/GA table in RNs for Egress IP additional nwts

--- a/release_notes/ocp-4-15-release-notes.adoc
+++ b/release_notes/ocp-4-15-release-notes.adoc
@@ -2084,6 +2084,11 @@ In the following tables, features are marked with the following statuses:
 |General Availability
 |General Availability
 
+|Egress IPs on additional network interfaces
+|Not Available
+|General Availability
+|General Availability
+
 |Intel E810 Westport Channel NIC as PTP grandmaster clock
 |Technology Preview
 |Technology Preview
