OSDOCS-11885: Sigstore signature verification for core OCP images

--- a/security/container_security/security-understanding.adoc
+++ b/security/container_security/security-understanding.adoc
@@ -66,3 +66,6 @@ include::modules/security-understanding-openshift.adoc[leveloffset=+1]
 .Additional resources
 * xref:../../architecture/architecture.adoc#architecture[{product-title} architecture]
 * link:https://www.redhat.com/en/resources/openshift-security-guide-ebook[OpenShift Security Guide]
+
+// Container security and validation
+include::modules/security-understanding-container-validation.adoc[leveloffset=+1]
