[OSDOCS-11902]: Adding release note for etcd node scaling

--- a/release_notes/ocp-4-17-release-notes.adoc
+++ b/release_notes/ocp-4-17-release-notes.adoc
@@ -589,6 +589,11 @@ The Network Observability Operator releases updates independently from the {prod
 [id="ocp-4-17-scalability-and-performance_{context}"]
 === Scalability and performance
 
+[id="ocp-4-17-etcd-4-5-nodes_{context}"]
+==== Node scaling for etcd
+
+In this release, if your cluster is installed on a bare metal platform, you can scale a cluster to up to 5 nodes as a post-installation task. The etcd Operator scales accordingly to account for the additional node. For more information, see xref:../scalability_and_performance/recommended-performance-scale-practices/recommended-etcd-practices.adoc#etcd-node-scaling_recommended-etcd-practices[Node scaling for etcd].
+
 [id="ocp-4-17-edge-computing_{context}"]
 === Edge computing
 
