OSDOCS-12026 OCP 4.13.50 Hotfix RNs

--- a/release_notes/ocp-4-13-release-notes.adoc
+++ b/release_notes/ocp-4-13-release-notes.adoc
@@ -2746,7 +2746,7 @@ In the following tables, features are marked with the following statuses:
 [id="ocp-4-13-known-issues"]
 == Known issues
 
-* For a cloud controller manager (CCM) with the `--cloud-provider=external` option set to `cloud-provider-vsphere`, a known issue exists for a cluster that operates in a networking environment with multiple subnets. 
+* For a cloud controller manager (CCM) with the `--cloud-provider=external` option set to `cloud-provider-vsphere`, a known issue exists for a cluster that operates in a networking environment with multiple subnets.
 +
 When you upgrade your cluster from {product-title} 4.12 to {product-title} {product-version}, the CCM selects a wrong node IP address and this operation generates an error message in the `namespaces/openshift-cloud-controller-manager/pods/vsphere-cloud-controller-manager` logs. The error message indicates a mismatch with the node IP address and the `vsphere-cloud-controller-manager` pod IP address in your cluster.
 +
@@ -4350,5 +4350,25 @@ $ oc adm release info 4.13.49 --pullspecs
 ----
 
 [id="ocp-4-13-49-updating"]
+==== Updating
+To update an existing {product-title} 4.13 cluster to this latest release, see xref:../updating/updating-cluster-cli.adoc#updating-cluster-cli[Updating a cluster using the CLI].
+
+[id="ocp-4-13-50"]
+=== RHSA-2024:6691 - {product-title} 4.13.50 bug fix and security updates
+
+Issued: 19 September 2024
+
+{product-title} release 4.13.50, which includes security updates, is now available. The list of bug fixes that are included in the update is documented in the link:https://access.redhat.com/errata/RHSA-2024:6691[RHSA-2024:6691] advisory. There are no RPM packages in this release.
+
+Space precluded documenting all of the container images for this release in the advisory.
+
+You can view the container images in this release by running the following command:
+
+[source,terminal]
+----
+$ oc adm release info 4.13.50 --pullspecs
+----
+
+[id="ocp-4-13-50-updating"]
 ==== Updating
 To update an existing {product-title} 4.13 cluster to this latest release, see xref:../updating/updating-cluster-cli.adoc#updating-cluster-cli[Updating a cluster using the CLI].
