OSDOCS-12041 Fixing heading in release note

--- a/release_notes/ocp-4-17-release-notes.adoc
+++ b/release_notes/ocp-4-17-release-notes.adoc
@@ -538,12 +538,12 @@ Updated boot images are now supported as a Technology Preview feature for Amazon
 
 [id="ocp-4-17-machine-config-operator-boot-image-gcp_{context}"]
 === Updated boot images for GCP clusters promoted to GA
- 
+
 Updated boot images has been promoted to GA for Google Cloud Platform (GCP) clusters. For more information, see xref:../machine_configuration/mco-update-boot-images.adoc#mco-update-boot-images[Updated boot images].
 
 [id="ocp-4-17-machine-config-operator-node-disrupt-ga_{context}"]
 === Node disruption policies promoted to GA
- 
+
 Node disruption policies for Google Cloud Platform (GCP) clusters has been promoted to GA. A node disruption policy allows you to define a set of Ignition config objects changes that would require little or no disruption to your workloads. For more information, see xref:../machine_configuration/machine-config-node-disruption.adoc#machine-config-node-disruption[Using node disruption policies to minimize disruption from machine config changes].
 
 [id="ocp-4-17-machine-management_{context}"]
@@ -559,7 +559,7 @@ For more information, see _Configuring Capacity Reservation by using machine set
 === Nodes
 
 [id="ocp-4-17-must-gather-new-flags_{context}"]
-=== New flags added for must-gather command
+==== New flags added for must-gather command
 
 {product-title} release {product-version} adds two new flags for use with the `oc adm must-gather` command to limit the timespan of the information gathered. Only one of the following flags can be used at a time. Plugins are encouraged but not required to support these flags.
 
