fix for bug OCPBUGS-17399 - adding update API named certificates section
Signed-off-by: Vladislav Walek <22072258+vwalek@users.noreply.github.com>

--- a/security/certificates/api-server.adoc
+++ b/security/certificates/api-server.adoc
@@ -11,4 +11,11 @@ cluster CA. Clients outside of the cluster will not be able to verify the
 API server's certificate by default. This certificate can be replaced
 by one that is issued by a CA that clients trust.
 
+[WARNING]
+====
+Before applying a custom API named certificate, xref:../../security/certificates/updating-ca-bundle.adoc#ca-bundle-understanding_updating-ca-bundle[update the CA bundle]. The cluster must trust the CA bundle of the named API certificate, to avoid `x509 signed by unknown authority` errors. Some internal {product-title} components use the `api.<cluster_name>.<base_domain>` endpoint for accessing the Kubernetes API server. If the API named certificate is not trusted by cluster, the cluster might become inaccessible.
+====
+
 include::modules/customize-certificates-api-add-named.adoc[leveloffset=+1]
+
+include::modules/customize-certificates-api-update-named.adoc[leveloffset=+1]
