Add 4.17 ShiftStack RNs and make table adjustments
Resolves OSDOCS-11226

--- a/release_notes/ocp-4-17-release-notes.adoc
+++ b/release_notes/ocp-4-17-release-notes.adoc
@@ -85,6 +85,20 @@ For more information on required permissions, see xref:../installing/installing_
 
 With this release, you can install {product-title} on {aws-first} by using an existing identity and access management (IAM) instance profile. For more information, see xref:../installing/installing_aws/installation-config-parameters-aws.adoc#installation-configuration-parameters-optional-aws_installation-config-parameters-aws[Optional {aws-short} configuration parameters].
 
+[id="installation-and-update-shiftstack-compact_{context}"]
+==== Three-node cluster support for {rh-openstack}
+
+Deploying a three-node cluster on installer-provisioned infrastructure is now supported on {rh-openstack-first}.
+
+For more information, see xref:../installing/installing_openstack/installing-openstack-three-node.adoc#installing-openstack-three-node[Installing a three-node cluster on OpenStack].
+
+[id="ocp-4-17-deploying-osp-with-root-volume-etcd-on-local-disk"]
+==== Deploying {rh-openstack-first} with root volume and etcd on local disk (Generally Available)
+
+You can now move etcd from a root volume (Cinder) to a dedicated ephemeral local disk as a Day 2 deployment with this generally available feature.
+
+For more information, see xref:../installing/installing_openstack/deploying-openstack-with-rootVolume-etcd-on-local-disk.adoc#deploying-openstack-with-rootvolume-etcd-on-local-disk[Deploying on OpenStack with rootVolume and etcd on local disk].
+
 [id="ocp-4-17-postinstallation-configuration_{context}"]
 === Postinstallation configuration
 
@@ -1727,7 +1741,12 @@ In the following tables, features are marked with the following statuses:
 |Control Plane with `rootVolumes` and `etcd` on local disk
 |Technology Preview
 |Technology Preview
-|Technology Preview
+|General Availability
+
+|Hosted control planes
+|Not Available
+|Not Available
+|Developer Preview
 
 |====
 
