OCPBUGS-35488_4.14:updating installation doc

--- a/modules/installation-aws-tested-machine-types.adoc
+++ b/modules/installation-aws-tested-machine-types.adoc
@@ -18,6 +18,7 @@ ifeval::["{context}" == "installing-aws-secret-region"]
 :secretregion:
 endif::[]
 
+:_mod-docs-content-type: REFERENCE
 [id="installation-aws-tested-machine-types_{context}"]
 = Tested instance types for AWS
 
@@ -38,7 +39,7 @@ ifndef::localzone,secretregion[]
 .Machine types based on 64-bit x86 architecture
 [%collapsible]
 ====
-include::https://raw.githubusercontent.com/openshift/installer/master/docs/user/aws/tested_instance_types_x86_64.md[]
+include::https://raw.githubusercontent.com/openshift/installer/release-4.14/docs/user/aws/tested_instance_types_x86_64.md[]
 ====
 endif::localzone,secretregion[]
 ifdef::localzone[]
