--- a/hosted_control_planes/hcp-deploy/hcp-deploy-aws.adoc
+++ b/hosted_control_planes/hcp-deploy/hcp-deploy-aws.adoc
@@ -5,3 +5,7 @@ include::_attributes/common-attributes.adoc[]
 :context: hcp-deploy-aws
 
 toc::[]
+
+include::snippets/logging-compatibility-snip.adoc[]
+
+include::modules/logging-release-notes-6-0-0.adoc[leveloffset=+1]
