Logging 6.0 Release Notes

--- a/observability/logging/logging-6.0/log6x-release-notes.adoc
+++ b/observability/logging/logging-6.0/log6x-release-notes.adoc
@@ -5,3 +5,7 @@ include::_attributes/common-attributes.adoc[]
 :context: logging-6x
 
 toc::[]
+
+include::snippets/logging-compatibility-snip.adoc[]
+
+include::modules/logging-release-notes-6-0-0.adoc[leveloffset=+1]
