OSDOCS-11838: Renaming EUS-to-EUS to Control plane Only updates 4.14

--- a/release_notes/ocp-4-14-release-notes.adoc
+++ b/release_notes/ocp-4-14-release-notes.adoc
@@ -3863,7 +3863,7 @@ $ oc adm release info 4.14.25 --pullspecs
 
 * Previously, when users imported image stream tags, `ImageContentSourcePolicy` (ICSP) could not co-exist with `ImageDigestMirrorSet` (IDMS) and `ImageTagMirrorSet` (ITMS). {product-title} ignored any IDMS/ITMS created by the user and favored ICSP. With this release, the image stream tags can co-exist because importing image stream tags now respect IDMS/ITMS when ICSP is also present. (link:https://issues.redhat.com/browse/OCPBUGS-31509[*OCPBUGS-31509*])
 
-* Previously, after you performed an EUS-to-EUS update on your {product-title} cluster that involved pausing and unpausing the machine config pool, two reboot operations occured after the unpause operation. This additional reboot was not expected and was caused by the performance profile controller being reconciled against an older `MachineConfig` object that is listed in the `MachineConfigPool` object. With this release, the performance profile controller reconciles against the latest `MachineConfig` object that is listed in the `MachineConfigPool` object so that the extra reboot does not occur. (link:https://issues.redhat.com/browse/OCPBUGS-32980[*OCPBUGS-32980*])
+* Previously, after you performed a Control Plane Only update on your {product-title} cluster that involved pausing and unpausing the machine config pool, two reboot operations occured after the unpause operation. This additional reboot was not expected and was caused by the performance profile controller being reconciled against an older `MachineConfig` object that is listed in the `MachineConfigPool` object. With this release, the performance profile controller reconciles against the latest `MachineConfig` object that is listed in the `MachineConfigPool` object so that the extra reboot does not occur. (link:https://issues.redhat.com/browse/OCPBUGS-32980[*OCPBUGS-32980*])
 
 * Previously, a kernel regression that was introduced in {product-title} 4.14.14 caused kernel issues, such as nodes crashing and rebooting, in nodes that mounted to CephFS storage. In this release, the regression issue is fixed so that the kernel regression issue no longer occurs. (link:https://issues.redhat.com/browse/OCPBUGS-33251[*OCPBUGS-33251*])
 
