--- a/storage/container_storage_interface/persistent-storage-csi-migration.adoc
+++ b/storage/container_storage_interface/persistent-storage-csi-migration.adoc
@@ -18,5 +18,5 @@ include::modules/persistent-storage-csi-migration-vsphere.adoc[leveloffset=+1]
 ifndef::openshift-origin[]
 [role="_additional-resources"]
 .Additional resources
-* xref:../../updating/updating_a_cluster/eus-eus-update.adoc#eus-eus-update[Performing an EUS-to-EUS update]
+* xref:../../updating/updating_a_cluster/control-plane-only-update.adoc#control-plane-only-update[Performing a Control Plane Only update]
 endif::openshift-origin[]
