--- a/modules/update-upgrading-cli.adoc
+++ b/modules/update-upgrading-cli.adoc
@@ -69,7 +69,7 @@ endif::openshift-origin[]
 * If there are no recommended updates, updates that have known issues might still be available.
 See _Updating along a conditional update path_ for more information.
 ifndef::openshift-origin[]
-* For details and information on how to perform an `EUS-to-EUS` channel update, please refer to the _Preparing to perform an EUS-to-EUS upgrade_ page, listed in the Additional resources section.
+* For details and information on how to perform a `Control Plane Only` update, please refer to the _Preparing to perform a Control Plane Only update_ page, listed in the Additional resources section.
 endif::openshift-origin[]
 ====
 ifndef::openshift-origin[]
@@ -197,4 +197,3 @@ ip-10-0-182-134.ec2.internal   Ready    worker   70m   v1.30.3
 ip-10-0-211-16.ec2.internal    Ready    master   82m   v1.30.3
 ip-10-0-250-100.ec2.internal   Ready    worker   69m   v1.30.3
 ----
-
