--- a/updating/updating_a_cluster/control-plane-only-update.adoc
+++ b/updating/updating_a_cluster/control-plane-only-update.adoc
@@ -1,8 +1,8 @@
 :_mod-docs-content-type: ASSEMBLY
-[id="eus-eus-update"]
-= Performing an EUS-to-EUS update
+[id="control-plane-only-update"]
+= Performing a Control Plane Only update
 include::_attributes/common-attributes.adoc[]
-:context: eus-to-eus-update
+:context: control-plane-only-update
 
 toc::[]
 
@@ -18,49 +18,49 @@ However, administrators who want to update between two Extended Update Support (
 
 [IMPORTANT]
 ====
-EUS-to-EUS updates are only viable between *even-numbered minor versions* of {product-title}.
+Control Plane Only updates are only viable between *even-numbered minor versions* of {product-title}.
 ====
 
-There are a number of caveats to consider when attempting an EUS-to-EUS update.
+There are several caveats to consider when attempting a Control Plane Only update.
 
-* EUS-to-EUS updates are only offered after updates between all versions involved have been made available in `stable` channels.
+* Control Plane Only updates are only offered after updates between all versions involved have been made available in `stable` channels.
 * If you encounter issues during or after updating to the odd-numbered minor version but before updating to the next even-numbered version, then remediation of those issues may require that non-control plane hosts complete the update to the odd-numbered version before moving forward.
 * You can do a partial update by updating the worker or custom pool nodes to accommodate the time it takes for maintenance.
 
 * Until the machine config pools are unpaused and the update is complete, some features and bugs fixes in <4.y+1> and <4.y+2> of {product-title} are not available.
 
-* All the clusters might update using EUS channels for a conventional update without pools paused, but only clusters with non control-plane `MachineConfigPools` objects can do EUS-to-EUS update with pools paused.
+* All the clusters might update using EUS channels for a conventional update without pools paused, but only clusters with non control-plane `MachineConfigPools` objects can do Control Plane Only updates with pools paused.
 
-// EUS-to-EUS update
-include::modules/updating-eus-to-eus-upgrade.adoc[leveloffset=+1]
+// Control Plane Only update
+include::modules/updating-control-plane-only-upgrade.adoc[leveloffset=+1]
 
-// EUS-to-EUS update using the web console
-include::modules/updating-eus-to-eus-upgrade-console.adoc[leveloffset=+2]
+// Control Plane Only update using the web console
+include::modules/updating-control-plane-only-upgrade-console.adoc[leveloffset=+2]
 
 [role="_additional-resources"]
-[id="additional-resources_updating-eus-to-eus-upgrade-console"]
+[id="additional-resources_updating-control-plane-only-upgrade-console"]
 .Additional resources
 
 * xref:../../operators/admin/olm-upgrading-operators.adoc#olm-upgrading-operators[Updating installed Operators]
 * xref:../../updating/updating_a_cluster/updating-cluster-web-console.adoc#update-upgrading-web_updating-cluster-web-console[Updating a cluster by using the web console]
 * xref:../../updating/updating_a_cluster/updating-cluster-rhel-compute.adoc#updating-cluster-rhel-compute[Updating a cluster that includes RHEL compute machines]
 
-// EUS-to-EUS update using the CLI
-include::modules/updating-eus-to-eus-upgrade-cli.adoc[leveloffset=+2]
+// Control Plane Only update using the CLI
+include::modules/updating-control-plane-only-upgrade-cli.adoc[leveloffset=+2]
 
 [role="_additional-resources"]
-[id="additional-resources_updating-eus-to-eus-upgrade-cli"]
+[id="additional-resources_updating-control-plane-only-upgrade-cli"]
 .Additional resources
 
 * xref:../../operators/admin/olm-upgrading-operators.adoc#olm-upgrading-operators[Updating installed Operators]
 * xref:../../updating/updating_a_cluster/updating-cluster-rhel-compute.adoc#updating-cluster-rhel-compute[Updating a cluster that includes RHEL compute machines]
 
-include::modules/updating-eus-to-eus-layered-products.adoc[leveloffset=+2]
+include::modules/updating-control-plane-only-layered-products.adoc[leveloffset=+2]
 
 [role="_additional-resources"]
-[id="additional-resources_updating-eus-to-eus-layered-products"]
+[id="additional-resources_updating-control-plane-only-layered-products"]
 .Additional resources
 
 * xref:../../operators/admin/olm-upgrading-operators.adoc#olm-upgrading-operators[Updating installed Operators]
-* xref:../../updating/updating_a_cluster/eus-eus-update.adoc#updating-eus-to-eus-upgrade-console_eus-to-eus-update[EUS-to-EUS update using the web console]
-* xref:../../updating/updating_a_cluster/eus-eus-update.adoc#updating-eus-to-eus-upgrade-cli_eus-to-eus-update[EUS-to-EUS update using the CLI]
+* xref:../../updating/updating_a_cluster/control-plane-only-update.adoc#updating-control-plane-only-upgrade-console_control-plane-only-update[Control Plane Only update using the web console]
+* xref:../../updating/updating_a_cluster/control-plane-only-update.adoc#updating-control-plane-only-upgrade-cli_control-plane-only-update[Control Plane Only update using the CLI]
