--- a/modules/ols-creating-lightspeed-custom-resource-file-using-cli.adoc
+++ b/modules/ols-creating-lightspeed-custom-resource-file-using-cli.adoc
@@ -17,7 +17,7 @@ The Custom Resource (CR) file contains information that the Operator uses to dep
 
 . Create an `OLSConfig` file that contains the YAML content for the LLM provider you use:
 +
-.Example OpenAI custom resource file
+.OpenAI custom resource file
 +
 [source,yaml, subs="attributes,verbatim"]
 ----
@@ -45,7 +45,7 @@ spec:
 For OpenShift AI vLLM use the same configuration as OpenAI but update the URL to point to your Virtual Large Language Model (vLLM) endpoint. If OpenShift Lightspeed operates in the same cluster as the vLLM model serving instance, you can point to the internal OpenShift service hostname instead of exposing vLLM with a route.
 ====
 +
-.Example {azure-openai} custom resource file
+.{azure-openai} custom resource file
 +
 [source,yaml, subs="attributes,verbatim"]
 ----
@@ -70,7 +70,7 @@ spec:
     logLevel: DEBUG
 ----
 +
-.Example {watsonx} custom resource file
+.{watsonx} custom resource file
 +
 [source,yaml, subs="attributes,verbatim"]
 ----
