--- a/modules/ols-creating-the-credentials-secret-using-cli.adoc
+++ b/modules/ols-creating-the-credentials-secret-using-cli.adoc
@@ -1,11 +1,12 @@
 // This module is used in the following assemblies:
-// ols-configuring-openshift-lightspeed.adoc
+
+// * configure/ols-configuring-openshift-lightspeed.adoc
 
 :_mod-docs-content-type: PROCEDURE
 [id="ols-creating-the-credentials-secret-using-cli_{context}"]
 = Creating the credentials secret using the command line
 
-Create a file that is associated with the secret key used to access the API of your LLM provider. You can use API tokens to authenticate your LLM provider. Additionally, {azure-official} supports authentication using Entra ID.
+Create a file that is associated with the API token used to access the API of your LLM provider. Typically, you use API tokens to authenticate your LLM provider. Alternatively, {azure-official} also supports authentication using {entra-id}.
 
 .Prerequisites
 
@@ -17,9 +18,13 @@ Create a file that is associated with the secret key used to access the API of y
 
 . Create a file that contains the following YAML content:
 +
-.Example credential secret for LLM provider
+[NOTE]
+====
+The YAML parameter is always `apitoken` regardless of what the LLM provider calls the access details.
+====
 +
-[source,yaml, subs="attributes,verbatim"]
+.Credential secret for LLM provider
+[source,yaml,subs="attributes,verbatim"]
 ----
 apiVersion: v1
 kind: Secret
@@ -32,9 +37,36 @@ stringData:
 ----
 <1> The `apitoken` is not `base64` encoded.
 +
-.Example credential secret for {azure-official} {openai}
+.Credential secret for {watsonx}
+[source,yaml,subs="attributes,verbatim"]
+----
+apiVersion: v1
+data:
+  apitoken: NlFy 
+kind: Secret
+metadata:
+  name: watsonx-api-keys
+  namespace: openshift-lightspeed
+type: Opaque
+----
 +
-[source,yaml, subs="attributes,verbatim"]
+.Credential secret for {azure-official} {openai}
+[source,yaml,subs="attributes,verbatim"]
+----
+apiVersion: v1
+data:
+  apitoken: azure_token 
+kind: Secret
+metadata:
+  name: azure-api-keys
+  namespace: openshift-lightspeed
+type: Opaque
+----
++
+Alternatively, for {azure-openai} you can use {entra-id} to authenticate your LLM provider. {entra-id} users must configure the required roles for their {azure-openai} resource. For more information, see the official Microsoft link:https://learn.microsoft.com/en-us/azure/ai-services/openai/how-to/role-based-access-control#cognitive-services-openai-contributor[Cognitive Services OpenAI Contributor](Microsoft Azure OpenAI Service documentation).
++
+.Credential secret for {entra-id}
+[source,yaml,subs="attributes,verbatim"]
 ----
 apiVersion: v1
 data:
