--- a/modules/ols-creating-lightspeed-custom-resource-file-using-web-console.adoc
+++ b/modules/ols-creating-lightspeed-custom-resource-file-using-web-console.adoc
@@ -19,7 +19,7 @@ The Custom Resource (CR) file contains information that the Operator uses to dep
 
 . Paste the YAML content for the LLM provider you use into the text area of the web console:
 +
-.Example OpenAI custom resource file
+.OpenAI custom resource file
 +
 [source,yaml, subs="attributes,verbatim"]
 ----
@@ -42,7 +42,7 @@ spec:
     defaultProvider: myOpenai
 ----
 +
-.Example {azure-openai} custom resource file
+.{azure-openai} custom resource file
 +
 [source,yaml, subs="attributes,verbatim"]
 ----
@@ -66,7 +66,7 @@ spec:
     defaultProvider: myAzure
 ----
 +
-.Example {watsonx} custom resource file
+.{watsonx} custom resource file
 +
 [source,yaml, subs="attributes,verbatim"]
 ----
