--- a/backup_and_restore/application_backup_and_restore/release-notes/oadp-1-4-release-notes.adoc
+++ b/backup_and_restore/application_backup_and_restore/release-notes/oadp-1-4-release-notes.adoc
@@ -9,9 +9,11 @@ toc::[]
 
 The release notes for {oadp-first} describe new features and enhancements, deprecated features, product recommendations, known issues, and resolved issues.
 
+include::modules/oadp-1-4-1-release-notes.adoc[leveloffset=+1]
 include::modules/oadp-1-4-0-release-notes.adoc[leveloffset=+1]
 include::modules/oadp-backing-up-dpa-configuration-1-4-0.adoc[leveloffset=+3]
 include::modules/oadp-upgrading-oadp-operator-1-4-0.adoc[leveloffset=+3]
+
 [role="_additional-resources"]
 .Additional resources
 * xref:../../../operators/admin/olm-upgrading-operators.adoc#olm-changing-update-channel_olm-upgrading-operators[Updating installed Operators]
@@ -25,3 +27,4 @@ To upgrade from OADP 1.3 to 1.4, no Data Protection Application (DPA) changes ar
 === Verifying the upgrade
 
 Verify the installation by following steps from the xref:../../../backup_and_restore/application_backup_and_restore/release-notes/oadp-release-notes-1-2.adoc#verifying-upgrade-1-2-0_oadp-release-notes[Verifying the upgrade] section.
+
