Update warning wording per SME

--- a/modules/installation-osp-local-disk-deployment.adoc
+++ b/modules/installation-osp-local-disk-deployment.adoc
@@ -264,9 +264,9 @@ spec:
 +
 [WARNING]
 ====
-After the `98-var-lib-etcd.yaml` file is applied to the system, do not remove it. Removing this file will result in broken etcd members.
+After you apply the `98-var-lib-etcd.yaml` file to the system, do not remove it. Removing this file will break etcd members and lead to system instability.
 
-If you must perform a rollback, change the flavor in the `ControlPlaneMachineSet` object to one that does not include the ephemeral attribute. This change regenerates the master nodes without using ephemeral disks for the etcd partition, preventing system issues related to the `98-var-lib-etcd.yaml` file.
+If a rollback is necessary, modify the `ControlPlaneMachineSet` object to use a flavor that does not include ephemeral disks. This change regenerates the control plane nodes without using ephemeral disks for the etcd partition, which avoids issues related to the `98-var-lib-etcd.yaml` file. It is safe to remove the `98-var-lib-etcd.yaml` file only after the update to the `ControlPlaneMachineSet` object is complete and no control plane nodes are using ephemeral disks.
 ====
 
 . Create the new `MachineConfig` object by running the following command:
