OSDOCS#1116: OLMv1 Service accounts

--- a/extensions/ce/managing-ce.adoc
+++ b/extensions/ce/managing-ce.adoc
@@ -21,6 +21,7 @@ include::modules/olmv1-supported-extensions.adoc[leveloffset=+1]
 
 include::modules/olmv1-finding-operators-to-install.adoc[leveloffset=+1]
 include::modules/olmv1-catalog-queries.adoc[leveloffset=+2]
+include::modules/olmv1-creating-a-service-account.adoc[leveloffset=+1]
 include::modules/olmv1-installing-an-operator.adoc[leveloffset=+1]
 
 [role="_additional-resources"]
