--- a/modules/olmv1-installing-an-operator.adoc
+++ b/modules/olmv1-installing-an-operator.adoc
@@ -14,6 +14,8 @@ You can install an extension from a catalog by creating a custom resource (CR) a
 * You have added a catalog to your cluster.
 * You have downloaded a local copy of the catalog file.
 * You have installed the `jq` CLI tool.
+* You have created a service account and assigned the appropriate role-based access controls (RBAC) to install, update, and manage your extension. For more information, see _Creating a service account to manage a cluster extension_.
+
 
 .Procedure
 
@@ -114,13 +116,16 @@ metadata:
 spec:
   packageName: openshift-pipelines-operator-rh
   installNamespace: <namespace>
+  serviceAccount:
+    name: <service-account>
   channel: <channel>
   version: "<version>"
 ----
 +
 where:
 +
-`<namespace>`:: Specifies the namespace where you want the bundle installed, such as `openshift-operators` or `my-extension`. Extensions are still cluster-scoped and might contain resources that are installed in different namespaces.
+`<namespace>`:: Specifies the namespace where you want the bundle installed, such as `pipelines` or `my-extension`. Extensions are still cluster-scoped and might contain resources that are installed in different namespaces.
+`<service-account>`:: Specifies the name of the service account you created to install, update, and manage your extension.
 `<channel>`:: Optional: Specifies the channel, such as `pipelines-1.11` or `latest`, for the package you want to install or update.
 `<version>`:: Optional: Specifies the version or version range, such as `1.11.1`, `1.12.x`, or `>=1.12.1`, of the package you want to install or update. For more information, see "Example custom resources (CRs) that specify a target version" and "Support for version ranges".
 +
@@ -170,7 +175,7 @@ items:
     uid: c54237be-cde4-46d4-9b31-d0ec6acc19bf
   spec:
     channel: latest
-    installNamespace: openshift-operators
+    installNamespace: pipelines
     packageName: openshift-pipelines-operator-rh
     upgradeConstraintPolicy: Enforce
   status:
@@ -271,7 +276,7 @@ metadata:
   resourceVersion: "53414"
   uid: 74367cfc-578e-4da0-815f-fe40f3ca5d1c
 spec:
-  installNamespace: openshift-operators
+  installNamespace: pipelines
   provisionerClassName: core-rukpak-io-registry
   source:
     image:
