TELCODOCS-1983: Clarifying 8 vCPU units

--- a/modules/understanding-agent-install.adoc
+++ b/modules/understanding-agent-install.adoc
@@ -52,11 +52,10 @@ Recommended cluster resources for the following topologies:
 [options="header"]
 |====
 |Topology|Number of master nodes|Number of worker nodes|vCPU|Memory|Storage
-|Single-node cluster|1|0|8 vCPU cores|16GB of RAM| 120GB
-|Compact cluster|3|0 or 1|8 vCPU cores|16GB of RAM|120GB
-|HA cluster|3|2 and above |8 vCPU cores|16GB of RAM|120GB
+|Single-node cluster|1|0|8 vCPUs|16GB of RAM| 120GB
+|Compact cluster|3|0 or 1|8 vCPUs|16GB of RAM|120GB
+|HA cluster|3|2 and above |8 vCPUs|16GB of RAM|120GB
 |====
-
 
 The following platforms are supported:
 
