OCPBUGS-42296 adding known issue for Azure controlplane.platform null failure

--- a/release_notes/ocp-4-17-release-notes.adoc
+++ b/release_notes/ocp-4-17-release-notes.adoc
@@ -1418,12 +1418,12 @@ In the following tables, features are marked with the following statuses:
 |Technology Preview
 
 |RWX/RWO SELinux Mount
-|Not Available 
+|Not Available
 |Not Available
 |Developer Preview
 
 |Migrating CNS Volumes Between Datastores
-|Not Available 
+|Not Available
 |Not Available
 |Developer Preview
 
@@ -1889,6 +1889,17 @@ In the following tables, features are marked with the following statuses:
 * The `oc annotate` command does not work for LDAP group names that contain an equal sign (`=`), because the command uses the equal sign as a delimiter between the annotation name and value. As a workaround, use `oc patch` or `oc edit` to add the annotation. (link:https://bugzilla.redhat.com/show_bug.cgi?id=1917280[*BZ#1917280*])
 
 * The DNF package manager included in {op-system-first} images cannot be used at runtime, because DNF relies on additional packages to access entitled nodes in a cluster that are under a Red Hat subscription. As a workaround, use the `rpm-ostree` command instead. (link:https://issues.redhat.com/browse/OCPBUGS-35247[*OCPBUGS-35247*])
+
+* When installing a cluster on {azure-full}, the installation will fail if no `install-config.yaml` file is provided. If an `install-config.yaml` file is provided, and `controlPlane.platform` is present but `controlPlane.platform.azure` is not provided, the installation will fail. (link:https://issues.redhat.com/browse/OCPBUGS-42296[*OCPBUGS-42296*])
++
+See xref:../installing/installing_azure/ipi/installing-azure-customizations.adoc#installation-azure-config-yaml_installing-azure-customizations[Sample customized install-config.yaml file for Azure] for a sample configuration file, or set a non-null parameter as in the following example:
++
+[source,yaml]
+----
+controlPlane:
+  platform:
+    azure: {}
+----
 
 [id="ocp-telco-ran-4-17-known-issues_{context}"]
 
