add rhel package version

--- a/release_notes/ocp-4-17-release-notes.adoc
+++ b/release_notes/ocp-4-17-release-notes.adoc
@@ -52,6 +52,10 @@ This release adds improvements related to the following components and concepts:
 [id="ocp-4-17-rhcos_{context}"]
 === {op-system-first}
 
+[id="ocp-4-17-rhcos-rhel-9-4-packages_{context}"]
+==== {op-system} uses {op-system-base} 9.4
+{op-system} uses {op-system-base-full} 9.4 packages in {product-title} {product-version}. These packages ensure that your {product-title} instance receives the latest fixes, features, enhancements, hardware support, and driver updates.
+
 [id="ocp-4-17-rhcos-dnf_{context}"]
 ==== Support for the DNF package manager
 With this release, you can now use DNF to install additional packages to your customized {op-system-first} builds. For more information, see xref:../machine_configuration/mco-coreos-layering.adoc[{op-system-first} layering].
