OSDOCS-12089 Adding azure capi known issues

--- a/release_notes/ocp-4-17-release-notes.adoc
+++ b/release_notes/ocp-4-17-release-notes.adoc
@@ -1901,6 +1901,10 @@ controlPlane:
     azure: {}
 ----
 
+* When installing multiple clusters on {azure-full}, running multiple installations simultaneously from the same installation host will result in only one of the clusters installing successfully. If you run the installations sequentially rather than simultaneously, you can install multiple clusters on {azure-short} from the same installation host. (link:https://issues.redhat.com/browse/OCPBUGS-42296[*OCPBUGS-42296*])
+
+* When installing a cluster on {azure-full}, specifying the `Standard_M8-4ms` instance type results in an error due to that instance type specifying its memory in decimal format instead of integer format. (link:https://issues.redhat.com/browse/OCPBUGS-42241[*OCPBUGS-42241*])
+
 [id="ocp-telco-ran-4-17-known-issues_{context}"]
 
 [id="ocp-telco-core-4-17-known-issues_{context}"]
