RN - 4.17 - KI - TELCODOCS-1964

--- a/release_notes/ocp-4-17-release-notes.adoc
+++ b/release_notes/ocp-4-17-release-notes.adoc
@@ -2154,6 +2154,9 @@ As a temporary workaround, the image registry should not be configured as privat
 
 [id="ocp-telco-ran-4-17-known-issues_{context}"]
 
+* When you run Cloud-native Network Functions (CNF) latency tests on an {product-title} cluster, the test can sometimes return results greater than the latency threshold for the test; for example, 20 microseconds for `cyclictest` testing. This results in a test failure.
+(link:https://issues.redhat.com/browse/OCPBUGS-42328[*OCPBUGS-42328*])
+
 [id="ocp-telco-core-4-17-known-issues_{context}"]
 
 [id="ocp-storage-core-4-17-known-issues_{context}"]
