Added troubleshooting section in oc-mirror v2 docs

--- a/installing/disconnected_install/about-installing-oc-mirror-v2.adoc
+++ b/installing/disconnected_install/about-installing-oc-mirror-v2.adoc
@@ -76,6 +76,11 @@ include::modules/oc-mirror-workflows-fully-disconnected-v2.adoc[leveloffset=+2]
 include::modules/oc-mirror-mirror-to-disk-v2.adoc[leveloffset=+2]
 include::modules/oc-mirror-disk-to-mirror-v2.adoc[leveloffset=+2]
 
+// Troubleshooting errors
+
+include::modules/oc-mirror-about-ts-v2.adoc[leveloffset+=2]
+include::modules/oc-mirror-troubleshooting-v2.adoc[leveloffset=+3]
+
 [id="additional-resources"]
 == Additional resources
 
