Added troubleshooting section in oc-mirror v2 docs

--- a/installing/disconnected_install/about-installing-oc-mirror-v2.adoc
+++ b/installing/disconnected_install/about-installing-oc-mirror-v2.adoc
@@ -76,6 +76,9 @@ include::modules/oc-mirror-workflows-fully-disconnected-v2.adoc[leveloffset=+2]
 include::modules/oc-mirror-mirror-to-disk-v2.adoc[leveloffset=+2]
 include::modules/oc-mirror-disk-to-mirror-v2.adoc[leveloffset=+2]
 
+// Troubleshooting errors:
+
+
 [id="additional-resources"]
 == Additional resources
 
@@ -96,6 +99,8 @@ include::modules/oc-mirror-procedure-delete-v2.adoc[leveloffset=+2]
 
 // About dry-run
 include::modules/oc-mirror-v2-about-dry-run.adoc[leveloffset=+1]
+
+include::modules/oc-mirror-troubleshooting-v2.adoc[leveloffset=+1]
 
 // Performing Dry-run for V2
 include::modules/oc-mirror-dry-run-v2.adoc[leveloffset=+2]
