RHDEVDOCS-6146: Updated Condition management commands section

--- a/modules/op-tkn-condition-management.adoc
+++ b/modules/op-tkn-condition-management.adoc
@@ -1,6 +1,8 @@
 // This module is included in the following assemblies:
 // * tkn_cli/op-tkn-reference.adoc
 
+:_mod-docs-content-type: REFERENCE
+
 [id="op-tkn-condition-management_{context}"]
 = Condition management commands
 
