ROX23837 SME feedback

--- a/modules/run-compliance-scan.adoc
+++ b/modules/run-compliance-scan.adoc
@@ -13,9 +13,7 @@ Central collects the host-based data from the Sensors running in your clusters.
 After that, Central collects more data from the compliance container running in each collector pod.
 The compliance container collects the following data about your environment:
 
-* Configurations for Docker Daemon, Docker image, and Docker container.
-* Information about Docker networks.
-* Command-line arguments and processes for Docker, Kubernetes, and {ocp}.
+* Command-line arguments and processes for Kubernetes and {ocp}.
 * Permissions of specific file paths.
 * Configuration files for the core Kubernetes and {ocp} services.
 
