--- a/operating/manage-compliance/managing-compliance-10.adoc
+++ b/operating/manage-compliance/managing-compliance-10.adoc
@@ -10,7 +10,7 @@ toc::[]
 By using {product-title} you can assess, check, and report on the compliance status of your containerized infrastructure.
 You can run out-of-the-box compliance scans based on industry standards including:
 
-* *CIS Benchmarks* (Center for Internet Security) for *Docker* and *Kubernetes*
+* *CIS Benchmarks* (Center for Internet Security) for *Kubernetes*
 * *HIPAA* (Health Insurance Portability and Accountability Act)
 * *NIST Special Publication 800-190* and *800-53* (National Institute of Standards and Technology)
 * *PCI DSS* (Payment Card Industry Data Security Standard)
@@ -19,7 +19,7 @@ You can run out-of-the-box compliance scans based on industry standards includin
 By scanning your environment based on these standards you can:
 
 * Evaluate your infrastructure for regulatory compliance.
-* Harden your Docker Engine and Kubernetes orchestrator.
+* Harden your Kubernetes orchestrator.
 * Understand and manage the overall security posture of your environment.
 * Get a detailed view of compliance status for clusters, namespaces, and nodes.
 
