--- a/modules/supported-benchmark-versions.adoc
+++ b/modules/supported-benchmark-versions.adoc
@@ -12,7 +12,7 @@
 |===
 |Benchmark |Supported version
 
-|CIS Benchmarks (Center for Internet Security) for Docker and Kubernetes
+|CIS Benchmark (Center for Internet Security) for Kubernetes
 |CIS Kubernetes v1.5.0
 
 |HIPAA (Health Insurance Portability and Accountability Act)
