--- a/modules/otel-troubleshoot-instrumentation.adoc
+++ b/modules/otel-troubleshoot-instrumentation.adoc
@@ -17,7 +17,7 @@ You can troubleshoot instrumentation issues as follows.
 oc get instrumentation -n <your-project>
 ----
 
-. Confirm that the application pods you wish to instrument are labeled correctly and the appropriate auto-instrumentation settings have been applied. For example, if you are instrumenting a Python application, you can check that the pods have the `instrumentation.opentelemetry.io/inject-python='true'` label:
+. Confirm that the application pods you want to instrument are labeled correctly and the appropriate auto-instrumentation settings have been applied. For example, if you are instrumenting a Python application, you can check that the pods have the `instrumentation.opentelemetry.io/inject-python='true'` label:
 +
 
 [source,console]
